# c_lessons

./: .gitignore  .travis.yml  CMakeLists.txt  README.RST  README.rst  a.out
for_dynamic_library/: create_and_count_matrix.c  creating_processes.c  initial_struct_and_process.c  multipl_app.c
for_static_library/: create_and_count_d.c  single_app.c
includes/: ft_rome.h  header.h  header.h.gch
make_console/: CMakeLists.txt
make_test/: CMakeLists.txt
src/: functions.c  main.c  main_console.c  main_test.c
test/: test_func.c
tests/: for_dynamic.c  for_static.c  main.cpp  main_test.c  matrix_for_tests.c  test.cpp  test_main.c
utils/: free_f.c  standart_matrix_func.c
